# stratton_chu_further

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  repeat.sh  run.sh
cpp/: .gitignore  CMakeLists.txt  Doxyfile
cpp/app/: CMakeLists.txt  main.cpp
cpp/stratton-chu-library/: CMakeLists.txt  beams.cpp  beams.hpp  types.hpp  utils.cpp  utils.hpp
cpp/stratton-chu-library/include/: constants.hpp  function.hpp  thread_pool.hpp
cpp/stratton-chu-library/src/: csv-saver.cpp  distorted-surface.cpp  elliptic-surface.cpp  field-in-region.cpp  field.cpp  parabolic-surface.cpp  parallel-beam.cpp  parallelepiped-volume.cpp  plane-surface.cpp  spec-inverse-fourier.cpp  stratton-chu-field.cpp  surface.cpp  utils.cpp  volume.cpp  vtk-saver.cpp
cpp/stratton-chu-library/stratton-chu/: csv-saver.hpp  distorted-beam.hpp  distorted-surface.hpp  elliptic-surface.hpp  field-in-region.hpp  field.hpp  fields-in-3dregion.hpp  fields-in-region.hpp  geometry.hpp  parabolic-surface.hpp  parallel-beam.hpp  parallelepiped-volume.hpp  plane-surface.hpp  spec-inverse-fourier.hpp  stratton-chu-field.hpp  surface.hpp  types.hpp  utils.hpp  volume.hpp  vtk-field-plotter.hpp  vtk-saver.hpp
cpp/tests/: CMakeLists.txt  test-beams.cpp  test-polynomial.cpp  test-utils.cpp
repetitions/1_6_5e-04/: horiz_moves_for_12_beams.txt
repetitions/2_6_5e-04/: horiz_moves_for_12_beams.txt
